# METIS

./: .gitignore  .gitmodules  BUILD-Windows.txt  CMakeLists.txt  CMakePresets.json  Changelog  Makefile  README.md  TODO  vsgen.bat
.github/workflows/: ci.yaml  cmake.yml  step_test.yaml
cmake/: CMakePresets-CI.json  CMakePresets-defaults.json  METIS.cmake  METISConfig.cmake.in  METIS_PackagesInfo.cmake  metis.pc.in
cmake/compat/: FetchContentGKlib_After.cmake  FetchContentGKlib_Before.cmake
conf/: check_thread_storage.c  gkbuild.cmake
doxygen/: Doxyfile  Makefile
graphs/: metis.mesh.epart.10  metis.mesh.epart.2
include/: CMakeLists.txt  metis.h  metis.h.in
libmetis/: CMakeLists.txt  coarsen.c  compress.c  debug.c  defs.h  fortran.c  graph.c  kmetis.c  kwayfm.c  kwayrefine.c  mesh.c  minconn.c  mincover.c  options.c  parmetis.c  pmetis.c  proto.h  refine.c  rename.h  struct.h  util.c  wspace.c
programs/: CMakeLists.txt  cmdline_gpmetis.c  gpmetis.c  io.c  m2gmetis.c  mpmetis.c  ndmetis.c  stat.c  struct.h
src/: CMakeLists.txt
src/libmetis/: auxapi.c  balance.c  checkgraph.c  contig.c  defs.h  fm.c  initpart.c  kwayfm.c  metislib.h  minconn.c  options.c  sfm.c  srefine.c  struct.h
src/programs/: CMakeLists.txt  cmdline_gpmetis.c  cmdline_ndmetis.c  gpmetis.c  metisbin.h
test/: CMakeLists.txt  Makefile  proto.h
test/mtest/: CMakeLists.txt  mtest.c
utils/: commands  int2idxtype.sh  listunescapedsymbols.csh  mkdist.sh  s+r.sh
